feat(PersonCredits): retrieve tv credits

--- a/static/locales/en/movie.json
+++ b/static/locales/en/movie.json
@@ -1,4 +1,5 @@
 {
   "movie-label-synopsis": "Synopsis",
-  "movie-label-cast": "Cast"
+  "movie-label-cast": "Cast",
+  "movie-label-crew": "Crew"
 }
