--- a/static/locales/en/person.json
+++ b/static/locales/en/person.json
@@ -1,3 +1,5 @@
 {
-  "person-label-biography": "Biography"
+  "person-label-biography": "Biography",
+  "person-label-movies": "Movies",
+  "person-label-series": "TV Series"
 }
