--- a/static/locales/fr/movie.json
+++ b/static/locales/fr/movie.json
@@ -1,4 +1,5 @@
 {
   "movie-label-synopsis": "Résumé",
-  "movie-label-cast": "Equipe"
+  "movie-label-cast": "Equipe artistique",
+  "movie-label-crew": "Equipe technique"
 }
