--- a/static/locales/fr/person.json
+++ b/static/locales/fr/person.json
@@ -1,3 +1,5 @@
 {
-  "person-label-biography": "Biographie"
+  "person-label-biography": "Biographie",
+  "person-label-movies": "Films",
+  "person-label-series": "Séries TV"
 }
