feat(Cast): add `*/cast` pages

--- a/static/locales/en/movie.json
+++ b/static/locales/en/movie.json
@@ -1,5 +1,6 @@
 {
   "movie-label-synopsis": "Synopsis",
   "movie-label-cast": "Cast",
-  "movie-label-crew": "Crew"
+  "movie-label-crew": "Crew",
+  "movie-label-full-casting": "See full casting"
 }
