--- a/static/locales/fr/movie.json
+++ b/static/locales/fr/movie.json
@@ -1,5 +1,6 @@
 {
   "movie-label-synopsis": "Résumé",
   "movie-label-cast": "Equipe artistique",
-  "movie-label-crew": "Equipe technique"
+  "movie-label-crew": "Equipe technique",
+  "movie-label-full-casting": "Voir toute l'équipe"
 }
