feat(Search): style Search results

--- a/static/locales/en/common.json
+++ b/static/locales/en/common.json
@@ -1,4 +1,5 @@
 {
   "common-label-home": "Home",
-  "common-label-about": "About"
+  "common-label-about": "About",
+  "common-search-placeholder": "Search for a movie, tv show, person ..."
 }
