--- a/static/locales/fr/common.json
+++ b/static/locales/fr/common.json
@@ -1,4 +1,5 @@
 {
   "common-label-home": "Accueil",
-  "common-label-about": "A propos"
+  "common-label-about": "A propos",
+  "common-search-placeholder": "Rechercher un film, une série, un artiste ..."
 }
