Feature/v2 setup styled components + style/design for Header (#1)
* feat(cssInJs): setup styled-components

- https://www.styled-components.com/docs/basics#installation
- https://github.com/zeit/next.js/tree/canary/examples/with-styled-components

* refactor(Header): split in two components to prepare for ui layout/styling

* feat(Header): add style/design to Header

* feat(cssInJs): setup theme in styled-components

* feat(Search): style Search box

* feat(Search): style Search results

* feat(Footer): style Footer

* feat(a11y): reorder component use navigation with tab

* feat(TranslationPicker): manage clickout + let the component manage its own state for open popup

* feat(TranslationPicker): translate the popup

* feat(*): Update About and Home

--- a/static/locales/en/common.json
+++ b/static/locales/en/common.json
@@ -1,4 +1,8 @@
 {
   "common-label-home": "Home",
-  "common-label-about": "About"
+  "common-label-about": "About",
+  "common-search-placeholder": "Search for a movie, tv show, person ...",
+  "common-translation-picker-translations": "Translations",
+  "common-translation-picker-language-preferences": "Language preferences",
+  "common-translation-picker-label-default-language": "Default language"
 }
