feat(MovieInfosCardFull): design for desktop

--- a/static/locales/en/movie.json
+++ b/static/locales/en/movie.json
@@ -8,5 +8,25 @@
   "movie-label-all-seasons": "All seasons",
   "movie-label-episode-count": "{{count}} episode",
   "movie-label-episode-count_plural": "{{count}} episodes",
-  "movie-label-featured-crew": "Featured Crew"
+  "movie-label-featured-crew": "Featured Crew",
+  "movie-status-rumored": "Rumored",
+  "movie-status-planned": "Planned",
+  "movie-status-in-production": "In Production",
+  "movie-status-post-production": "Post Production",
+  "movie-status-released": "Released",
+  "movie-status-canceled": "Canceled",
+  "movie-status-returning-series": "Returning Series",
+  "movie-status-ended": "Ended",
+  "movie-status-pilot": "Pilot",
+  "movie-infos-label-facts": "Facts",
+  "movie-infos-label-original-title": "Original title",
+  "movie-infos-label-status": "Status",
+  "movie-infos-label-release-infos": "Release informations",
+  "movie-infos-label-runtime": "Runtime",
+  "movie-infos-label-budget": "Budget",
+  "movie-infos-label-revenue": "Revenue",
+  "movie-infos-label-genres": "Genres",
+  "movie-infos-label-keywords": "Keywords",
+  "movie-currency": "${{amount, currency}}",
+  "movie-date": "{{date, MM/DD/YYYY}}"
 }
