--- a/static/locales/fr/common.json
+++ b/static/locales/fr/common.json
@@ -4,5 +4,6 @@
   "common-search-placeholder": "Rechercher un film, une série, un artiste ...",
   "common-translation-picker-translations": "Traductions",
   "common-translation-picker-language-preferences": "Préférences de langue",
-  "common-translation-picker-label-default-language": "Langage par défaut"
+  "common-translation-picker-label-default-language": "Langage par défaut",
+  "common-label-back-mainpage": "Retour à l'écran principal"
 }
