feat(*): design for desktop + mobile (#2)
* feat(MoviePreview): start styling

* feat(MoviePreview): design for desktop

* feat(MovieContent): design for desktop

* feat(MovieInfosCardFull): design for desktop

* feat(TextContent): limit maxWords + add some dir=auto on other components

* feat(Movie): mobile version

* feat(PersonPreview): design for desktop

* refactor(*): extract styled comps to ui/*

* feat(PopularCreditCard): desktop and mobile versions

* feat(PersonInfosCardFull): desktop and mobile version

* feat(tmdb): deduplicate credits

* feat(PersonContent): add title

* feat(SimpleBanner)

* feat(*): design /cast and /seasons pages

* refactor(*): cleanup code

--- a/static/locales/en/person.json
+++ b/static/locales/en/person.json
@@ -1,5 +1,17 @@
 {
   "person-label-biography": "Biography",
   "person-label-movies": "Movies",
-  "person-label-series": "TV Series"
+  "person-label-series": "TV Series",
+  "person-label-personal-info": "Personal Info",
+  "person-label-known-for": "Known For",
+  "person-label-gender": "Gender",
+  "person-label-known-credits": "Known Credits",
+  "person-label-birthday": "Birthday",
+  "person-label-place-of-birth": "Place of Birth",
+  "person-label-official-site": "Official Site",
+  "person-label-also-known-as": "Also Known As",
+  "person-gender-0": "Not specified",
+  "person-gender-1": "Female",
+  "person-gender-2": "Male",
+  "person-date": "{{date, MM/DD/YYYY}}"
 }
