--- a/static/locales/fr/movie.json
+++ b/static/locales/fr/movie.json
@@ -7,5 +7,26 @@
   "movie-label-season": "Saison {{number}}",
   "movie-label-all-seasons": "Toutes les saisons",
   "movie-label-episode-count": "{{count}} épisode",
-  "movie-label-episode-count_plural": "{{count}} épisodes"
+  "movie-label-episode-count_plural": "{{count}} épisodes",
+  "movie-label-featured-crew": "Equipe technique en vedette",
+  "movie-status-rumored": "Rumeur",
+  "movie-status-planned": "Planifié",
+  "movie-status-in-production": "En Production",
+  "movie-status-post-production": "Post Production",
+  "movie-status-released": "Publié",
+  "movie-status-canceled": "Annulé",
+  "movie-status-returning-series": "De Retour",
+  "movie-status-ended": "Terminé",
+  "movie-status-pilot": "Pilote",
+  "movie-infos-label-facts": "Informations",
+  "movie-infos-label-original-title": "Titre original",
+  "movie-infos-label-status": "Statut",
+  "movie-infos-label-release-infos": "Infos sur la sortie",
+  "movie-infos-label-runtime": "Durée",
+  "movie-infos-label-budget": "Budget",
+  "movie-infos-label-revenue": "Recette",
+  "movie-infos-label-genres": "Genres",
+  "movie-infos-label-keywords": "Mots-clés",
+  "movie-currency": "{{amount, currency}}$",
+  "movie-date": "{{date, DD/MM/YYYY}}"
 }
