--- a/static/locales/en/common.json
+++ b/static/locales/en/common.json
@@ -5,5 +5,6 @@
   "common-translation-picker-translations": "Translations",
   "common-translation-picker-language-preferences": "Language preferences",
   "common-translation-picker-label-default-language": "Default language",
-  "common-label-back-mainpage": "Back to Main page"
+  "common-label-back-mainpage": "Back to Main page",
+  "common-label-show-qrcode": "Show Qrcode"
 }
