--- a/static/locales/fr/common.json
+++ b/static/locales/fr/common.json
@@ -5,5 +5,6 @@
   "common-translation-picker-translations": "Traductions",
   "common-translation-picker-language-preferences": "Préférences de langue",
   "common-translation-picker-label-default-language": "Langage par défaut",
-  "common-label-back-mainpage": "Retour à l'écran principal"
+  "common-label-back-mainpage": "Retour à l'écran principal",
+  "common-label-show-qrcode": "Afficher Qrcode"
 }
