refactor(i18n): remove en/fr/about.json file

--- a/static/locales/en/common.json
+++ b/static/locales/en/common.json
@@ -6,5 +6,6 @@
   "common-translation-picker-language-preferences": "Language preferences",
   "common-translation-picker-label-default-language": "Default language",
   "common-label-back-mainpage": "Back to Main page",
-  "common-label-show-qrcode": "Show Qrcode"
+  "common-label-show-qrcode": "Show Qrcode",
+  "common-about-title": "About"
 }
