--- a/static/locales/fr/common.json
+++ b/static/locales/fr/common.json
@@ -5,6 +5,8 @@
   "common-translation-picker-translations": "Traductions",
   "common-translation-picker-language-preferences": "Préférences de langue",
   "common-translation-picker-label-default-language": "Langage par défaut",
+  "common-translation-picker-explain-available-translations": "Les traductions disponibles seront accessibles ici.",
+  "common-translation-picker-explain-exotic-translations": "Amusez-vous à essayer des langues telles que le chinois ou l'hébreux ...",
   "common-label-back-mainpage": "Retour à l'écran principal",
   "common-label-show-qrcode": "Afficher Qrcode",
   "common-about-title": "A propos"
